Fixed a layout bug.

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-* {
-  outline: 1px red solid !important;
-  visibility: visible !important;
-}
-
 ::-moz-selection {
   background: #00bfbf;
   color: #fafafa;
